--- a/url_redirector/wrangler.toml
+++ b/url_redirector/wrangler.toml
@@ -1,3 +1,3 @@
-name = "url_redirector"
+name = "s" # 指向Cloudflare的worker名称，要不然会报错，但是能部署成功，推荐修改为对应worker名字
 main = "index.js" # 直接指向根目录的 index.js
 compatibility_date = "2025-07-01" # 确保是当前或未来的日期
